--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
         networks: 
             - madam
     madam:
+        depends_on:
+            - madam-db
         image: php:7.4-apache
         container_name: app-madam
         restart: unless-stopped
@@ -23,7 +25,6 @@ services:
             - '8080:80'
         networks: 
             - madam
-
 networks: 
     madam:
         name: madam
