Change database server name, username, password, database name values. Add customers table and users table.

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-DB_SERVER=localhost
-DB_USERNAME=madam
+DB_SERVER=app-madam.v2-db
+DB_USERNAME=madamv2
 DB_PASSWORD=P4ssword
+DB_NAME=madamv2
+
+CUSTOMER_TABLE=customers
+USER_TABLE=users
