--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
     "require": {
-        "symfony/dotenv": "^5.1"
+        "symfony/dotenv": "^5.1",
+        "eftec/bladeone": "^3.47",
+        "klein/klein": "^2.1"
     },
     "autoload": {
         "psr-4": {
-            "Madam\\": "class/"
+            "Madam\\": ["class/", "app/", "controllers/", "router/"]
         }
     }
 }
