users and cid table

--- a/.env
+++ b/.env
@@ -3,5 +3,7 @@ DB_USERNAME=madamv2
 DB_PASSWORD=P4ssword
 DB_NAME=madamv2
 
+### TABLE LIST
 CUSTOMER_TABLE=customers
 USER_TABLE=users
+CID_TABLE=cid
