Add CID, Access Rights, and Networking tables

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ DB_NAME=madamv2
 CUSTOMER_TABLE=customers
 USER_TABLE=users
 CID_TABLE=cid
+ACCESS_RIGHTS_TABLE=access_rights
+NETWORKING_TABLE=networking
